Update frontend-deployment.yaml with fix

--- a/quotes-flask/k8s/frontend-deployment.yaml
+++ b/quotes-flask/k8s/frontend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       creationTimestamp: null
       labels:
         app: frontend
-    124 spec:
+    spec:
       containers:
         - image: ghcr.io/eficode-academy/quotes-flask-frontend:release
           name: quotes-flask-frontend
