--- a/apps/jenkins-app.yaml
+++ b/apps/jenkins-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: student-1-jenkins
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   destination:
